syntax = "proto3";

package helloworld.v2;

option go_package = "github.com/costa92/go-protoc/pkg/api/helloworld/v2;helloworldv2";

import "google/api/annotations.proto";

service Greeter {
  // post /v2/hello
  rpc SayHello (HelloRequest) returns (HelloReply) {
    option (google.api.http) = {
      post: "/v2/hello"
      body: "*"
    };
  }

  // get /v2/hello/{name}
  rpc SayHelloAgain (HelloRequest) returns (HelloReply) {
    option (google.api.http) = {
      get: "/v2/hello/{name}"
    };
  }
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}